# osf-project-exporter

./: .env.template  .gitignore  CONTRBUTING.md  CONTRIBUTING.md  README.md  compose.yaml  dockerfile  pyproject.toml  requirements.core.txt
.github/workflows/: test.yaml
docs/: cli.html  exporter.html  formatter.html  getting_started.rst  index.html  overview.rst
osfio-export-tool/: pyproject.toml
osfio-export-tool/src/client/: __init__.py  cli.py  streamlit.py
osfio-export-tool/src/clitool/: __init__.py  client.py
osfio-export-tool/src/exporter/: __init__.py  exporter.py
osfio-export-tool/src/exporter/stubs/: nodestubs.json
osfio-export-tool/tests/: test_clitool.py
osfio-export-tool/tests/stubs/: contributorstubs.json  nodestubs.json  singlenode.json  wikistubs.json
osfio-export-tool/tests/stubs/components/: x-children.json
osfio-export-tool/tests/stubs/files/: rootfolders.json  tf1files.json  tf1folders.json  tf2-second-files-2.json  tf2-second-files.json  tf2files.json
osfio-export-tool/tests/stubs/wikis/: wikistubs.json
src/client/: __init__.py  cli.py
src/osfexport/: __init__.py  cli.py  exporter.py  formatter.py
src/osfexport/stubs/: nodestubs.json  singlenode.json
tests/: test_clitool.py
