[project]
name = "osfio-export-tool"
version = "0.1.1"
authors = [
  "Ramiro Bravo <ramiro.bravo@manchester.ac.uk>",
  "Sarah Jaffa <sarah.jaffa@manchester.ac.uk>",
  "Benito Matischen <benito.matischen@manchester.ac.uk>",
  "Center for Open Science <contact@cos.io>"
]
description = "A package for exporting projects from the Open Science Framework web app. Comes with a CLI."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "click==8.2.1",
    "fpdf2==2.8.3",
    "pypdf==5.7.0",
    "mistletoe==1.4.0",
    "qrcode==8.2"
]

[project.urls]
Homepage = "https://github.com/CenterForOpenScience/osf-project-exporter/tree/development"
Issues = "https://github.com/CenterForOpenScience/osf-project-exporter/issues"

[project.scripts]
# Executable scripts, names are commands
osfget = "osfexport.cli:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "osfexport"

[tool.black]
line-length=100
preview=true

[tool.flake8]
max-line-length=100

[tool.ruff]
line-length=100
exclude = ["tests/*"]

[tool.ruff.lint]
select = ["E", "F"]